[gd_scene load_steps=37 format=3 uid="uid://ducsr1iwag28u"]

[ext_resource type="Script" path="res://Scenes and Scripts/Menus/Main Menu/main_menu.gd" id="1_3f1tb"]
[ext_resource type="Texture2D" uid="uid://r6osxlvpwdud" path="res://Assets/Art/UI/Menus/Main Menu/titlescreen_main.png" id="2_sbqtk"]
[ext_resource type="Texture2D" uid="uid://clcn17unia2fj" path="res://Assets/Art/UI/Menus/Title Screen/Start/titlescreen_start_001.png" id="3_1kg1d"]
[ext_resource type="Texture2D" uid="uid://b8fkioc55ls28" path="res://Assets/Art/Particles/leaf.png" id="3_lftx2"]
[ext_resource type="Texture2D" uid="uid://crrhnurucid3q" path="res://Assets/Art/Particles/Clouds/bg_cloud_main1.png" id="3_vtxkd"]
[ext_resource type="Texture2D" uid="uid://dhfas2b66qw1f" path="res://Assets/Art/Particles/Clouds/bg_cloud_main2.png" id="4_g4qs8"]
[ext_resource type="Texture2D" uid="uid://bm7gcry1ns620" path="res://Assets/Art/UI/Menus/Title Screen/Start/titlescreen_start_002.png" id="4_h203a"]
[ext_resource type="Texture2D" uid="uid://dvobwkpxpn8wu" path="res://Assets/Art/Particles/Clouds/bg_cloud_main3.png" id="5_qgi8g"]
[ext_resource type="Texture2D" uid="uid://csiuqoad3bqyt" path="res://Assets/Art/UI/Menus/Title Screen/Start/titlescreen_start_003.png" id="5_wlv6i"]
[ext_resource type="Texture2D" uid="uid://20m8sq4yw4hr" path="res://Assets/Art/UI/Menus/Title Screen/Start/titlescreen_start_004.png" id="6_35oed"]
[ext_resource type="Texture2D" uid="uid://ld2jwrr2boi7" path="res://Assets/Art/UI/Menus/Title Screen/Start/titlescreen_start_005.png" id="7_p3d45"]
[ext_resource type="PackedScene" uid="uid://c167vkgb61a1m" path="res://Scenes and Scripts/Menus/Credits/credits.tscn" id="8_e5ggp"]
[ext_resource type="Texture2D" uid="uid://bw4uijw5l3vn1" path="res://Assets/Art/UI/Menus/Title Screen/Start/titlescreen_start_006.png" id="8_iclu6"]
[ext_resource type="Texture2D" uid="uid://6y6y5emfkd32" path="res://Assets/Art/UI/Menus/Title Screen/Start/titlescreen_start_007.png" id="9_2ahhp"]
[ext_resource type="Texture2D" uid="uid://dr2bfsjonrajn" path="res://Assets/Art/UI/Menus/Title Screen/Start/titlescreen_start_008.png" id="10_drrmn"]
[ext_resource type="Texture2D" uid="uid://dbb2ejkecaweq" path="res://Assets/Art/UI/Menus/Title Screen/Start/titlescreen_start_009.png" id="11_5twst"]
[ext_resource type="Texture2D" uid="uid://blllg5vmvvl41" path="res://Assets/Art/UI/Buttons/Start Button/start_button.png" id="14_5avqw"]
[ext_resource type="PackedScene" uid="uid://ex8idjxdm1hh" path="res://Scenes and Scripts/Menus/Options/options.tscn" id="15_nlixp"]
[ext_resource type="Texture2D" uid="uid://178887epa2g4" path="res://Assets/Art/UI/Buttons/Start Button/start_button_dark.png" id="15_w52nx"]
[ext_resource type="AudioStream" uid="uid://c8hfjs6trma73" path="res://Assets/Sound/SFX/UI/Click/sfx_hub_ui_click_var1.mp3" id="16_ibkjm"]
[ext_resource type="Texture2D" uid="uid://dgogerhcje2p5" path="res://Assets/Art/UI/Buttons/Start Button/start_button_light.png" id="16_woyou"]
[ext_resource type="AudioStream" uid="uid://2rj1ayk1kdtp" path="res://Assets/Sound/SFX/UI/Click/sfx_hub_ui_click_var2.mp3" id="17_5xys2"]
[ext_resource type="Texture2D" uid="uid://2qwwdqwx72f6" path="res://Assets/Art/UI/Buttons/Einstellungen Button/einstellungen_button.png" id="17_66u7n"]
[ext_resource type="Texture2D" uid="uid://dhfx6ap4mxj60" path="res://Assets/Art/UI/Buttons/Einstellungen Button/einstellungen_button_dark.png" id="18_4fchb"]
[ext_resource type="AudioStream" uid="uid://bag4e5o0pn42r" path="res://Assets/Sound/SFX/UI/Click/sfx_hub_ui_click_var3.mp3" id="18_8hw22"]
[ext_resource type="Texture2D" uid="uid://b6a5jl8gfvl6d" path="res://Assets/Art/UI/Buttons/Einstellungen Button/einstellungen_button_light.png" id="19_jhnkh"]
[ext_resource type="AudioStream" uid="uid://c0au4soqh3llb" path="res://Assets/Sound/SFX/UI/Hover/sfx_hub_ui_hover_var1.mp3" id="19_v2mri"]
[ext_resource type="Texture2D" uid="uid://bdi0pp3q7rxdf" path="res://Assets/Art/UI/Buttons/Mitwirkende Button/mitwirkende_button.png" id="20_ltb8o"]
[ext_resource type="Texture2D" uid="uid://bmugy1s3pg22p" path="res://Assets/Art/UI/Buttons/Mitwirkende Button/mitwirkende_button_dark.png" id="21_m1fq5"]
[ext_resource type="AudioStream" uid="uid://ccy6mhwriygjc" path="res://Assets/Sound/SFX/UI/Hover/sfx_hub_ui_hover_var3.mp3" id="21_w12sd"]
[ext_resource type="Texture2D" uid="uid://crvb4tyvfd5qq" path="res://Assets/Art/UI/Buttons/Mitwirkende Button/mitwirkende_button_light.png" id="22_72qen"]

[sub_resource type="Animation" id="Animation_gk0aj"]
resource_name = "new_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.113725, 0.619608, 0.764706, 1), Color(0.113725, 0.619608, 0.764706, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wffvr"]
_data = {
"new_animation": SubResource("Animation_gk0aj")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_17etq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_1kg1d")
}, {
"duration": 1.0,
"texture": ExtResource("4_h203a")
}, {
"duration": 1.0,
"texture": ExtResource("5_wlv6i")
}, {
"duration": 1.0,
"texture": ExtResource("6_35oed")
}, {
"duration": 1.0,
"texture": ExtResource("7_p3d45")
}, {
"duration": 1.0,
"texture": ExtResource("8_iclu6")
}, {
"duration": 1.0,
"texture": ExtResource("9_2ahhp")
}, {
"duration": 1.0,
"texture": ExtResource("10_drrmn")
}, {
"duration": 1.0,
"texture": ExtResource("11_5twst")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_3xisq"]
playback_mode = 2
streams_count = 3
stream_0/stream = ExtResource("16_ibkjm")
stream_0/weight = 1.0
stream_1/stream = ExtResource("17_5xys2")
stream_1/weight = 1.0
stream_2/stream = ExtResource("18_8hw22")
stream_2/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_itqj1"]
playback_mode = 1
streams_count = 2
stream_0/stream = ExtResource("19_v2mri")
stream_0/weight = 1.0
stream_1/stream = ExtResource("21_w12sd")
stream_1/weight = 1.0

[node name="Main Menu" type="Node2D"]
script = ExtResource("1_3f1tb")

[node name="TierstadtBackground" type="TextureRect" parent="."]
offset_top = 2.0
offset_right = 1920.0
offset_bottom = 1082.0
texture = ExtResource("2_sbqtk")

[node name="Clouds2" type="CPUParticles2D" parent="."]
position = Vector2(-579, 547)
amount = 1
lifetime = 20.0
texture = ExtResource("3_vtxkd")
gravity = Vector2(20, 0)
initial_velocity_max = 20.0

[node name="Clouds3" type="CPUParticles2D" parent="."]
position = Vector2(-639, 451)
amount = 1
lifetime = 20.0
texture = ExtResource("4_g4qs8")
gravity = Vector2(20, 0)
initial_velocity_max = 20.0

[node name="Clouds4" type="CPUParticles2D" parent="."]
position = Vector2(-841, 262)
amount = 1
lifetime = 20.0
texture = ExtResource("5_qgi8g")
gravity = Vector2(20, 0)
initial_velocity_max = 20.0

[node name="Leaves" type="CPUParticles2D" parent="."]
position = Vector2(729, -73)
lifetime = 3.0
texture = ExtResource("3_lftx2")
emission_shape = 3
emission_rect_extents = Vector2(1920, 1)
gravity = Vector2(500, 980)
initial_velocity_max = 13.51
angular_velocity_min = -260.98
angular_velocity_max = 144.22
orbit_velocity_min = -0.1
orbit_velocity_max = 0.1
scale_amount_min = 0.0
scale_amount_max = 4.0

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
modulate = Color(0.113725, 0.619608, 0.764706, 0.9)
offset_right = 1920.0
offset_bottom = 1080.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
libraries = {
"": SubResource("AnimationLibrary_wffvr")
}
autoplay = "new_animation"

[node name="Clouds" type="AnimatedSprite2D" parent="."]
position = Vector2(960, 540)
sprite_frames = SubResource("SpriteFrames_17etq")
autoplay = "default"
frame = 8
frame_progress = 0.586524

[node name="Start" type="TextureButton" parent="."]
offset_left = 33.0
offset_top = 100.0
offset_right = 945.0
offset_bottom = 407.0
scale = Vector2(0.65, 0.65)
texture_normal = ExtResource("14_5avqw")
texture_pressed = ExtResource("15_w52nx")
texture_hover = ExtResource("16_woyou")

[node name="Options" type="TextureButton" parent="."]
offset_left = 33.0
offset_top = 335.0
offset_right = 945.0
offset_bottom = 642.0
scale = Vector2(0.65, 0.65)
texture_normal = ExtResource("17_66u7n")
texture_pressed = ExtResource("18_4fchb")
texture_hover = ExtResource("19_jhnkh")

[node name="Credits" type="TextureButton" parent="."]
offset_left = 33.0
offset_top = 570.0
offset_right = 945.0
offset_bottom = 877.0
scale = Vector2(0.65, 0.65)
texture_normal = ExtResource("20_ltb8o")
texture_pressed = ExtResource("21_m1fq5")
texture_hover = ExtResource("22_72qen")

[node name="CreditsMenu" parent="." instance=ExtResource("8_e5ggp")]
visible = false
position = Vector2(1, 9)

[node name="OptionsMenu" parent="." instance=ExtResource("15_nlixp")]
visible = false

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_3xisq")
volume_db = -18.0

[node name="Hover" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_itqj1")
volume_db = -15.0

[connection signal="animation_finished" from="Clouds" to="." method="_on_clouds_animation_finished"]
[connection signal="button_down" from="Start" to="." method="_on_button_click"]
[connection signal="button_up" from="Start" to="." method="_on_start_button_up"]
[connection signal="mouse_entered" from="Start" to="." method="_on_button_hovered"]
[connection signal="button_down" from="Options" to="." method="_on_button_click"]
[connection signal="button_up" from="Options" to="." method="_on_options_button_up"]
[connection signal="mouse_entered" from="Options" to="." method="_on_button_hovered"]
[connection signal="button_down" from="Credits" to="." method="_on_button_click"]
[connection signal="button_up" from="Credits" to="." method="_on_credits_button_up"]
[connection signal="mouse_entered" from="Credits" to="." method="_on_button_hovered"]
[connection signal="click" from="CreditsMenu" to="." method="_on_button_click"]
[connection signal="hover" from="CreditsMenu" to="." method="_on_button_hovered"]
[connection signal="click" from="OptionsMenu" to="." method="_on_button_click"]
[connection signal="hover" from="OptionsMenu" to="." method="_on_button_hovered"]
